--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <option value="all">All Cuisines</option>
         </select>
       </div>
-      <ul id="restaurants-list"></ul>
+      <ul id="restaurants-list" class="clearFix"></ul>
     </section>
   </main>
 
