实现了离线缓存，修改了一些样式

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1><a href="/" role="button">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
@@ -31,7 +31,7 @@
           <option value="all">All Cuisines</option>
         </select>
       </div>
-      <ul id="restaurants-list" class="clearFix"></ul>
+      <ul id="restaurants-list" class="clearFix" ></ul>
     </section>
   </main>
 
