--- a/restaurant.html
+++ b/restaurant.html
@@ -21,7 +21,8 @@
       <h1><a href="/" role="button">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <!--  添加aria-*辅助工具 -->
+    <ul id="breadcrumb"  aria-label='Breadcrumb'>           
       <li><a href="/" role="button">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -38,7 +39,7 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+      <h3 id="restaurant-name"></h3>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
