修改了一些关于可访问性的问题

--- a/restaurant.html
+++ b/restaurant.html
@@ -22,7 +22,7 @@
     </nav>
     <!-- Beginning breadcrumb -->
     <!--  添加aria-*辅助工具 -->
-    <ul id="breadcrumb"  aria-label='Breadcrumb'>           
+    <ul id="breadcrumb"  aria-label="Breadcrumb">           
       <li><a href="/" role="button">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
